kube/dev/albuquery-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
  name: albuquery-ingress
spec:
  rules:
  - host: lsst-pdac.ncsa.illinois.edu
    http:
      paths:
      - backend:
          serviceName: albuquery-service
          servicePort: 8080
        path: /dev/api/db/v1
